<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvproduct"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:animateLayoutChanges="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_item_imagen"
            android:layout_width="140dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            app:srcCompat="@drawable/ic_baseline_person_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_item_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/valtxt_listproduct_name"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_item_marca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pt_serif"
                android:text="@string/valtxt_listproduct_brand"
                android:textSize="11sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="end"
                    android:text="S/"
                    android:textColor="#040404"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_item_precio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="end"
                    android:text="@string/valtxt_listproduct_price"
                    android:textColor="#4A4A4A"
                    android:textSize="13sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>