<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvproductcart"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_cart_nombreproducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/valtxt_listproduct_name"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/iv_cart_imagenproducto"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                app:srcCompat="@drawable/img1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@+id/iv_cart_imagenproducto"
                android:layout_toRightOf="@+id/iv_cart_imagenproducto"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_cart_marcaproducto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/valtxt_listproduct_brand"
                        android:textSize="12sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="S/"
                            android:textColor="#040404"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/txt_cart_precioproducto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:gravity="end"
                            android:text="@string/valtxt_listproduct_price"
                            android:textColor="#4A4A4A"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btndelete"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        app:backgroundTint="#BC3E3E"
                        app:cornerRadius="50dp"
                        app:icon="@drawable/ic_baseline_delete_24"
                        app:iconGravity="textStart"
                        app:iconPadding="0dp" />

                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>